<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="450dp"
    android:layout_width="match_parent"
    android:layout_margin="20dp"
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.UserRegister">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:gravity="center">

        <!--<ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user"
            android:layout_marginTop="16dp" />-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/nombreview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/nombresText"
                android:layout_gravity="center"
                android:maxLength="40"
                android:id="@+id/FistNameEditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/apellidosview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/apellidosText"
                android:layout_gravity="center"
                android:id="@+id/LastNameEditText"
                android:maxLength="40"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/correoview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/correoText"
                android:inputType="textEmailAddress"
                android:layout_gravity="center"
                android:maxLength="100"
                android:id="@+id/Email_UserRegisterEditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/contrasenaview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/contraseñaText"
                android:layout_gravity="center"
                android:maxLength="32"
                android:id="@+id/Password_UserRegisterEditText"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/confirmarcontrasenaview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/confirmarContraseñaText"
                android:layout_gravity="center"
                android:maxLength="32"
                android:id="@+id/Confirm_PasswordEditText"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>