<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.LibrosActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="125dp"
            android:layout_height="125dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/default_book"
            android:layout_marginTop="16dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/tituloview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/tituloText"
                android:layout_gravity="center"
                android:maxLength="30"
                android:id="@+id/TituloRegistroeditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/anoview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/añoText"
                android:layout_gravity="center"
                android:id="@+id/AnoEdicioneditText"
                android:maxLength="4"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/ibbnview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/isbnText"
                android:inputType="number"
                android:layout_gravity="center"
                android:maxLength="13"
                android:id="@+id/ISBNRegistroeditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/areaview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/areaText"
                android:layout_gravity="center"
                android:maxLength="20"
                android:id="@+id/AreaRegistroeditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/autorview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/autorText"
                android:layout_gravity="center"
                android:maxLength="40"
                android:id="@+id/AutoreditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editoraview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/editoraText"
                android:layout_gravity="center"
                android:maxLength="40"
                android:id="@+id/EditoraeditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:id="@+id/edicionview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="Edicion"
                android:layout_gravity="center"
                android:maxLength="32"
                android:id="@+id/EdicioneditText" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

