<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:id="@+id/card_view"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:background="#FFF"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.Biblioteca_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/nombreview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/nombreText"
                android:layout_gravity="center"
                android:maxLength="40"
                android:id="@+id/NombreBibliotecaeditText"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/direccionview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/direcionText"
                android:layout_gravity="center"
                android:id="@+id/DireccionBibliotecaeditText"
                android:maxLength="100"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/telefonoview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/telefonoText"
                android:inputType="phone"
                android:layout_gravity="center"
                android:digits="0123456789+"
                android:maxLength="13"
                android:id="@+id/TelefonoBibliotecaeditText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:id="@+id/correoview">

            <EditText
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:hint="@string/correoText"
                android:layout_gravity="center"
                android:maxLength="100"
                android:id="@+id/CorreoBibliotecaeditText"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

